<resources>
    <string name="app_name">UserInterface</string>
    <string name="log_in">Log In</string>
    <string name="text_two">Lets get to work</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="login">LOGIN</string>
    <string name="social_media">Or create account using social media</string>
    <string name="with_facebook">f Login with Facebook</string>
    <string name="an_account">Dont have an account?</string>
    <string name="sign_up">Sign Up</string>
</resources>